Time: 5 ms (98.52%), Space: 47.8 MB (39.49%) - LeetHub